[package]
name = "nuclear"
version = "0.0.10"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2018"

license = "MIT"
description = "[WIP] a web framework for humans"
repository = "https://github.com/Nugine/nuclear"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
async-trait = "0.1.50"
bytes = "1.0.1"
futures = "0.3.15"
hyper = { version = "0.14.7", features = ["server", "http1", "http2", "stream", "tcp"] }
mime = "0.3.16"
pin-project = "1.0.7"
serde = "1.0.126"
serde_json = "1.0.64"
smallvec = "1.6.1"
thiserror = "1.0.24"
tracing = "0.1.26"

[dev-dependencies]
serde = { version = "1.0.126", features = ["derive"] }
tokio = { version = "1.6.0", features = ["full"] }
